# lucurious-docs

./: .gitignore  CONTRIBUTING.html  Gemfile  Makefile  README.md  Rakefile  file_convert.sh  index.md  lucurious-docs.gemspec  meson.build  version.rb  wlu_vkall.h.pod
adoc/: index.adoc
adoc/api/disp/: dlu_disp_freeup_core.adoc  dlu_disp_init_core.adoc
adoc/api/drm/: dlu_drm_freeup_core.adoc  dlu_drm_init_core.adoc
adoc/api/utils/: dlu_otba.adoc  dlu_otma.adoc  dlu_release_blocks.adoc
adoc/api/vkcomp/: dlu_create_desc_pool.adoc  dlu_create_desc_set_layout.adoc  dlu_create_desc_sets.adoc  dlu_create_device_queue.adoc  dlu_create_instance.adoc  dlu_create_logical_device.adoc  dlu_create_physical_device.adoc  dlu_create_pipeline_layout.adoc  dlu_create_queue_families.adoc  dlu_create_vk_buffer.adoc  dlu_freeup_vk.adoc  dlu_init_vk.adoc  dlu_set.adoc  dlu_set_debug_message.adoc  dlu_set_device_debug_ext.adoc  dlu_vk_map_mem.adoc
adoc/cmd/: lucur.adoc
adoc/enums/utils/: dlu_block_type.adoc  dlu_data_type.adoc
adoc/structs/vkcomp/: vkcomp.adoc
api/: dlu_freeup_vk.md  dlu_init_vk.md  dlu_otba.md  dlu_otma.md  dlu_set.md
api/drm/: dlu_drm_freeup_core.md  dlu_drm_init_core.md
api/utils/: dlu_otba.md  dlu_otma.md  dlu_release_blocks.md
api/vkcomp/: dlu_create_instance.md  dlu_freeup_vk.md  dlu_init_vk.md  dlu_set_debug_message.md  dlu_set_device_debug_ext.md
cmd/: lucur.md
enums/utils/: dlu_block_type.md  dlu_data_type.md
structs/: dlu_otma_mems.md  vkcomp.md
structs/drm/: dlu_drm_core.md
structs/utils/: dlu_otma_mems.md
structs/vkcomp/: vkcomp.md
(+4 files in other folders)
